prompt en cours

--- a/index.html
+++ b/index.html
@@ -26,6 +26,27 @@
             <h2>Comme vous ne l'avez jamais vue</h2>
             <button>Explorer</button>
         </section>
+        <section id="prompt" class="inactive">
+            <div class="header-prompt">
+                <div class="close-prompt">
+                    <p class="close">X</p>
+                </div>
+            </div>
+            <div class="content">
+                <div class="text">
+                    <h2>Quelle <span>ville</span> voulez-vous <span>découvrir</span> ?</h2>
+                </div>
+                <div class="search">
+                    <form method="post">
+                        <div class="input">
+                            <input type="text" name="search" id="search">
+                            <span>Entrez une ville</span>
+                        </div>
+                        <input type="submit" value="Valider">
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
 
     <section id="about">
